i suppose layers are tested independently

--- a/LogicTests/LogicTests.csproj
+++ b/LogicTests/LogicTests.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DataTests\DataTests.csproj" />
     <ProjectReference Include="..\Logic\Logic.csproj" />
   </ItemGroup>
 
